--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
+    <title>christmas treehouse</title>
     <meta name="description" content="christmas treehouse" />
     <meta name="author" content="Blaze" />
 
-    <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="christmas treehouse" />
     <meta property="og:image" content="favicon.png" />
   </head>
